--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -56,8 +56,9 @@ video {
     font-family: 'Caveat', cursive;
     border-left: 3px solid;
     padding: 0.5rem 1rem;
-    max-width: 24rem;
-    margin-left: 4rem;
+    /* max-width: 24rem; */
+    margin-left: 8rem;
+    margin-right: 1rem;
     margin-bottom: 1rem;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid #d1c7b7;
@@ -118,7 +119,8 @@ main {
 h1,
 li,
 .filter,
-form {
+form,
+em {
     margin-bottom: 1rem;
     border-bottom: 1px solid #d1c7b7;
     padding-bottom: 0.5rem;
@@ -164,9 +166,9 @@ input::placeholder {
 em {
     color: #ff6b6b;
     display: block;
-    margin-left: 4rem;
+    /* margin-left: 4rem;  */
     border-left: 2px solid #ff6b6b;
-    padding-left: .5rem;
+    /* padding-left: .5rem; */
 }
 
 form input {
@@ -191,18 +193,19 @@ form input {
     color: #be6c6c;
     font-family: 'Caveat', cursive;
     cursor: pointer;
-
     transition: all 0.2s ease;
     text-underline-offset: 1px;
 }
 
-.delete-btn:hover {
+.delete-btn:hover,
+.delete-btn:focus-visible {
     color: #8b0000;
     text-decoration: underline;
     text-decoration-style: solid;
 }
 
-.delete-btn:hover~.name-number {
+.delete-btn:hover~.name-number,
+.delete-btn:focus-visible~.name-number {
     text-decoration: line-through;
     text-decoration-thickness: 1.5px;
     text-decoration-color: rgb(34, 34, 34);
@@ -233,6 +236,13 @@ form input {
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
+.add-btn:focus-visible {
+    background-color: #fff;
+    transform: translateY(-1px);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    border: 1.5px solid #1a1919;
+}
+
 .add-btn:active {
     transform: translateY(0);
     box-shadow: none;
@@ -246,7 +256,12 @@ form input {
     h1,
     li,
     .filter,
-    form {
+    form,
+    em {
         padding-inline: 5rem;
+    }
+
+    .notification {
+        margin-left: 5rem;
     }
 }
